<resources>
    <string name="app_name">Android Nanodegree Portfolio</string>

    <string name="title">by Elijah Yoon</string>
    <string name="action_settings">Settings</string>
    <string name="app4">Build It Bigger</string>
    <string name="app1">Spotify Streamer</string>
    <string name="app2">Scores App</string>
    <string name="app3">Library App</string>
    <string name="app5">XYZ Reader</string>
    <string name="app6">My Capstone App</string>
</resources>
