<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/spotifyButton"
        style="@style/BasicButton"
        android:layout_above="@+id/scoresButton"
        android:text="@string/app1" />

    <Button
        android:id="@+id/scoresButton"
        style="@style/BasicButton"
        android:layout_above="@+id/libraryButton"
        android:text="@string/app2" />

    <Button
        android:id="@+id/libraryButton"
        style="@style/BasicButton"
        android:layout_above="@+id/buildButton"
        android:text="@string/app3" />

    <Button
        android:id="@+id/buildButton"
        style="@style/BasicButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app4"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <Button
        android:id="@+id/xyzButton"
        style="@style/BasicButton"
        android:layout_below="@+id/buildButton"
        android:text="@string/app5" />

    <Button
        android:id="@+id/capstoneButton"
        style="@style/BasicButton"
        android:layout_below="@+id/xyzButton"
        android:background="#F44336"
        android:text="@string/app6" />

    <TextView
        android:id="@+id/nameTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/capstoneButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/title"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>
